[package]
name = "nitrogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft_data_types = { version = "0.1.0", git = "https://github.com/SubZeroLabs/MinecraftTypes", branch = "master" }
mc_packet_protocol = { version = "0.1.0", git = "https://github.com/SubZeroLabs/PacketProtocol", branch = "master", features = ["all"] }
anyhow = "1.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
fern = "0.6"
chrono = "0.4"
bytes = "1.1"
async-trait = "0.1.51"
rsa = "0.5"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
sha-1 = "0.9"
sha2 = "0.9.8"
md-5 = "0.9"
num-bigint = "0.4"
flume = "0.10.9"
futures-lite = "1.12.0"
hmac = "0.11.0"

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
]
